# VulkanHWRT

./: .clang-format  .gitignore  CMakeLists.txt  README.md  _config.yml  test.py
cmake/: RtTutorial.cmake
common/: CMakeLists.txt  gltf_utils.cpp  gltf_utils.hpp  io_gltf.h  path_utils.hpp  rt_base.hpp  utils.cpp  utils.hpp
common/shaders/: foundation.slang  pbr.h.slang
docs/: acceleration_structures.md  index.md  setup.md  shader_binding_table.md
docs/_includes/: head-custom.html
raytrace_tutorial/: README.md
raytrace_tutorial/01_foundation/shaders/: shaderio.h
raytrace_tutorial/01_foundation_copy/: 01_foundation.cpp  CMakeLists.txt  README.md
raytrace_tutorial/01_foundation_copy/shaders/: foundation.slang  rtbasic.slang  shaderio.h
raytrace_tutorial/02_basic/: 02_basic.cpp  CMakeLists.txt  README.md
raytrace_tutorial/02_basic_nvvk/: 02_basic_nvvk.cpp  README.md
raytrace_tutorial/02_basic_nvvk/shaders/: rtbasic.slang  shaderio.h
raytrace_tutorial/03_any_hit/: 03_any_hit.cpp  CMakeLists.txt  README.md
raytrace_tutorial/03_any_hit/shaders/: rtanyhit.slang  shaderio.h
raytrace_tutorial/04_jitter_camera/: 04_jitter_camera.cpp  CMakeLists.txt  README.md
raytrace_tutorial/04_jitter_camera/shaders/: random.h.slang  rtjittercamera.slang  shaderio.h
raytrace_tutorial/05_shadow_miss/: 05_shadow_miss.cpp  CMakeLists.txt  README.md
raytrace_tutorial/05_shadow_miss/shaders/: rtshadowmiss.slang  shaderio.h
raytrace_tutorial/06_reflection/: 06_reflection.cpp  CMakeLists.txt  README.md
raytrace_tutorial/06_reflection/shaders/: rtreflection.slang  shaderio.h
raytrace_tutorial/07_multi_closest_hit/: 07_multi_closest_hit.cpp  CMakeLists.txt  README.md
raytrace_tutorial/07_multi_closest_hit/shaders/: rtmulticlosesthit.slang  shaderio.h
raytrace_tutorial/08_intersection/: 08_intersection.cpp  CMakeLists.txt  README.md
raytrace_tutorial/08_intersection/shaders/: rtintersection.slang  shaderio.h
raytrace_tutorial/09_motion_blur/: 09_motion_blur.cpp  CMakeLists.txt  README.md
raytrace_tutorial/09_motion_blur/shaders/: rtmotionblur.slang  shaderio.h
raytrace_tutorial/10_position_fetch/: 10_position_fetch.cpp  CMakeLists.txt  README.md
raytrace_tutorial/10_position_fetch/shaders/: position_fetch.slang  shaderio.h
raytrace_tutorial/11_shader_execution_reorder/: 11_shading_execution_reorder.cpp  CMakeLists.txt  README.md
raytrace_tutorial/11_shader_execution_reorder/shaders/: shader_execution_reorder.slang  shaderio.h
raytrace_tutorial/12_infinite_plane/: 12_infinite_plane.cpp  CMakeLists.txt  README.md
raytrace_tutorial/12_infinite_plane/shaders/: infinite_plane.slang  shaderio.h
raytrace_tutorial/13_callable_shader/: 13_callable_shader.cpp  CMakeLists.txt  README.md
raytrace_tutorial/13_callable_shader/shaders/: callable.slang  shaderio.h
raytrace_tutorial/14_animation/: 14_animation.cpp  CMakeLists.txt  README.md
raytrace_tutorial/14_animation/shaders/: animation.slang  shaderio.h  vertex_animation.slang
raytrace_tutorial/15_micro_maps_opacity/: 15_micro_maps_opacity.cpp  CMakeLists.txt  README.md  bit_packer.hpp  mm_process.cpp
raytrace_tutorial/16_ray_query/: 16_ray_query.cpp  README.md
raytrace_tutorial/16_ray_query/shaders/: shaderio.h  (+1 more)
raytrace_tutorial/17_ray_query_screenspace/: 17_ray_query_screenspace.cpp  CMakeLists.txt  README.md
raytrace_tutorial/XX_template/: CMakeLists.txt  README.md  XX_template.cpp
resources/: wuson.glb
(+6 files in other folders)
